minor: some changes to increase code readability